<?xml version="1.0"?>
<package format="2">
  <name>rtabmap_my</name>
  <version>0.0.1</version>
  <description>
    Custom package for TF broadcasting and other utilities
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
